<package format="2">
  <name>OMRosDrivers_py</name>
  <version>0.0.1</version>
  <description>
     meta_perception_py
  </description>

  <maintainer email="c.h.corbato@tudelft.nl">Carlos Hernandez Corbato</maintainer>
  <author email="c.h.corbato@tudelft.nl">Carlos Hernandez Corbato</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>rosnode</depend>
  <depend>rosparam</depend>

</package>

